# stampdb

./: .gitmodules  .readthedocs.yml  CMakeLists.txt  MANIFEST.in  README.md  benchmarks.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  test.cpp  test.py
.github/workflows/: draft-paper.yml  release.yml  release313.yml
JOSS/: paper.bib  paper.md  references.bib  stampdb_paper.md
include/: stampdb.hpp
include/internal/: converter.hpp  csvparse.hpp  fileio.hpp
python/: __init__.py  point.py
python/_backend/: __init__.py  types.cpp
source/: conf.py  index.rst  point.rst  relational.rst  stampdb.rst
src/: algorithms.cpp  appendonly.cpp  atomicity.cpp  csvparse.cpp  fileio.cpp  stampdb.cpp
stampdb/: __init__.py  csv.py  schema.py  stampdb.py
stampdb/_backend/: types.cpp
stampdb/relational/: __init__.py  joins.py
tests/: test_all.py
